content no longer hidden under navbar

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,26 @@
 * { margin:0; padding:0; }
-#nav { position: absolute; background-color:#0c0; width:100%; height:150px; }
+
+#nav { background-color:#0c0; width:100%; height:150px; }
 
 #login { position:absolute; top:50px; right:10px; }
 #login-open { position:relative; border:1px solid lightgray; }
-#login span { position:relative; display: inline-block; height:50px; width:200px; background-color:#0c0; border:1px solid #0a0; }
+#login span
+{
+    position:relative;
+    display: inline-block;
+    height:50px;
+    width:200px;
+    background-color:#0c0;
+    border:1px solid #0a0;
+    outline: 1px solid #0b0; /* a bit darker than the bg */
+    border-top: 1px solid green;
+    line-height: 50px;
+    text-align: center;
+    color:white;
+    font-weight:bold;
+}
+
+#login span:hover { color:#0c0; background-color: white; }
 
 #register { position:absolute; top:50px; right:10px; }
 #register-open { position:relative; border:1px solid lightgray; }
